# writing_style_converter

./: .flake8  .gitignore  .isort.cfg  README.md  pyproject.tom  pyproject.toml  setup.py
scripts/: format.sh  lint.sh  pipfreeze.sh
src/: wsc.py
tests/: test_wsc.py
writing_style_converter/: __init__.py  enums.py  factory_style.py  preparation_style.py  wsc.py
writing_style_converter.egg-info/: PKG-INFO  SOURCES.txt
wsc/: preparation_style.py  wsc.py
